Add PortName to ports stacks
For VIP ports we set an explicit name on the ports. This
patch adds an optional PortName parameter to the ports
objects which can be used to specify a name.

Change-Id: Iad0f5e4cfc31a931dbb574d9e589570125e9465c

--- a/network/ports/internal_api.yaml
+++ b/network/ports/internal_api.yaml
@@ -8,6 +8,10 @@ parameters:
     description: Name of the internal API neutron network
     default: internal_api
     type: string
+  PortName:
+    description: Name of the port
+    default: ''
+    type: string
   ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     type: string
@@ -18,6 +22,7 @@ resources:
     type: OS::Neutron::Port
     properties:
       network: {get_param: InternalApiNetName}
+      name: {get_param: PortName}
       replacement_policy: AUTO
 
 outputs:
