--- a/network/ports/noop.yaml
+++ b/network/ports/noop.yaml
@@ -7,6 +7,10 @@ parameters:
   ControlPlaneIP:
     description: IP address on the control plane
     type: string
+  PortName:
+    description: Name of the port
+    default: ''
+    type: string
   ControlPlaneSubnetCidr: # Override this via parameter_defaults
     default: '24'
     description: The subnet CIDR of the control plane network.
