--- a/network/ports/storage_mgmt.yaml
+++ b/network/ports/storage_mgmt.yaml
@@ -8,6 +8,10 @@ parameters:
     description: Name of the storage_mgmt API neutron network
     default: storage_mgmt
     type: string
+  PortName:
+    description: Name of the port
+    default: ''
+    type: string
   ControlPlaneIP: # Here for compatability with noop.yaml
     description: IP address on the control plane
     type: string
@@ -18,6 +22,7 @@ resources:
     type: OS::Neutron::Port
     properties:
       network: {get_param: StorageMgmtNetName}
+      name: {get_param: PortName}
       replacement_policy: AUTO
 
 outputs:
