horizon/keystone api should use internal_api NW
As most of the OpenStack services are automatically bound
to the public virtual IP already we don't need to set
the default network for Horizon and Keystone to the 'external'
network. These should probably default to the internal_api
network like the rest of the OpenStack services...

Change-Id: I04cf64568c2fc7bb8a821b0de5ba56aa90158e2d

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -504,14 +504,14 @@ parameters:
       GlanceApiNetwork: storage
       GlanceRegistryNetwork: internal_api
       KeystoneAdminApiNetwork: internal_api
-      KeystonePublicApiNetwork: external
+      KeystonePublicApiNetwork: internal_api
       NeutronApiNetwork: internal_api
       HeatApiNetwork: internal_api
       NovaApiNetwork: internal_api
       NovaMetadataNetwork: internal_api
       SwiftMgmtNetwork: storage_mgmt
       SwiftProxyNetwork: storage
-      HorizonNetwork: external
+      HorizonNetwork: internal_api
       MemcachedNetwork: internal_api
       RabbitMqNetwork: internal_api
       RedisNetwork: internal_api
