--- a/puppet/vip-config.yaml
+++ b/puppet/vip-config.yaml
@@ -28,9 +28,13 @@ resources:
                 redis_vip: {get_input: redis_vip}
                 mysql_vip: {get_input: mysql_vip}
                 mysql_vip: {get_input: mysql_vip}
+                tripleo::loadbalancer::public_virtual_ip: {get_input: public_virtual_ip}
+                tripleo::loadbalancer::controller_virtual_ip: {get_input: control_virtual_ip}
                 tripleo::loadbalancer::internal_api_virtual_ip: {get_input: internal_api_virtual_ip}
                 tripleo::loadbalancer::storage_virtual_ip: {get_input: storage_virtual_ip}
                 tripleo::loadbalancer::storage_mgmt_virtual_ip: {get_input: storage_mgmt_virtual_ip}
+                tripleo::redis_notification::haproxy_monitor_ip: {get_input: control_virtual_ip}
+
 
 outputs:
   OS::stack_id:
