Set glance_api_servers for cinder
This patch updates the hiera configuration for the Cinder API so
that we set glance_api_servers. By default Cinder constructs
a glance URL based on $my_ip (the local IP of the machine)
which may not be correct if you are running Glance on a non-default
internal network.

By setting glance_api_servers to the same thing we already
use for Nova we make Cinder contact the correct Glance URL
regardless of the network settings.

Change-Id: I1c56eb585ddfdc9989a8b55bc1bac819802f7794

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -794,6 +794,7 @@ resources:
                 cinder::rabbit_port: {get_input: rabbit_client_port}
                 cinder::debug: {get_input: debug}
                 cinder_enable_iscsi_backend: {get_input: cinder_enable_iscsi_backend}
+                cinder::glance::glance_api_servers: {get_input: glance_api_servers}
 
                 # Glance
                 glance::api::bind_port: {get_input: glance_port}
