Set VXLAN tunnels range to match GRE range
Change-Id: I16d259055fe4cd22541cd7abd7a26c71bbbaf292

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -13,6 +13,11 @@ nova::network::neutron::vif_plugging_is_fatal: false
 nova::network::neutron::vif_plugging_timeout: 30
 nova::network::neutron::dhcp_domain: ''
 
+neutron::plugins::ml2::tunnel_id_ranges:
+  - '1:1000'
+neutron::plugins::ml2::vni_ranges:
+  - '1:1000'
+
 sysctl_settings:
   net.ipv4.tcp_keepalive_intvl:
     value: 1
