Fix list of type_drivers for ML2 plugin
The list of drivers loaded by the ML2 plugin does not have to
match the list of tenant_network_types, this will make ML2 load
the flat, gre, vxlan and vlan drivers so that the provider
networks can be of flat (default) and vlan type as well.

Change-Id: I0b74f86acf5c1ff644deb46c0a1d14129c1882d4

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -17,6 +17,11 @@ neutron::plugins::ml2::tunnel_id_ranges:
   - '1:1000'
 neutron::plugins::ml2::vni_ranges:
   - '1:1000'
+neutron::plugins::ml2::type_drivers:
+  - flat
+  - gre
+  - vxlan
+  - vlan
 
 sysctl_settings:
   net.ipv4.tcp_keepalive_intvl:
