--- a/puppet/ceph-storage-puppet.yaml
+++ b/puppet/ceph-storage-puppet.yaml
@@ -69,6 +69,7 @@ resources:
 
   CephStorageDeployment:
     type: OS::Heat::StructuredDeployment
+    depends_on: NetworkDeployment
     properties:
       config: {get_resource: CephStorageConfig}
       server: {get_resource: CephStorage}
